--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
 appdirs==1.4.3
+asn1crypto==0.22.0
 cffi==1.10.0
 click==6.7
+cryptography==1.9
+enum34==1.1.6
+Fabric==1.13.2
 Flask==0.12.2
+gitric==0.4
 greenlet==0.4.12
+gunicorn==19.7.1
+idna==2.5
+ipaddress==1.0.18
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
 mittmcts==0.3
 packaging==16.8
+paramiko==2.1.2
+pkg-resources==0.0.0
+pyasn1==0.2.3
 pyparsing==2.2.0
 python-constraint==1.2
 readline==6.2.4.1
